// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm does not prefill address with bad data 1`] = `
<body>
  <div>
    <form>
      <div
        class="margin-top-4"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-step-indicator__current-step"
          >
            1
          </span>
          <span
            class="usa-step-indicator__total-steps"
          >
            of 
            4
          </span>
          <h1
            class="page-title display-inline"
          >
            Enter patient information
          </h1>
        </span>
      </div>
      <h2
        class="page-explainer"
      >
        Enter patient information below to search for a patient. We will query the connected network to find matching records.
         
      </h2>
      <div
        class="usa-summary-box demoQueryFiller"
      >
        <label
          class="usa-label margin-top-0-important maxw-full font-sans text-normal"
          data-testid="label"
          for="query"
        >
          The demo site uses synthetic data to provide examples of possible queries that you can make with the Query Connector. To proceed, click “fill fields” below.
        </label>
        <div
          class="searchCallToActionContainer"
        >
          <button
            class="usa-button usa-button--secondary"
            data-testid="button"
            type="button"
          >
            Fill fields
          </button>
          <button
            class="usa-button usa-button--unstyled margin-left-auto"
            data-testid="button"
            type="button"
          >
            Advanced
          </button>
        </div>
      </div>
      <fieldset
        class="usa-fieldset searchFormContainer bg-white"
        data-testid="fieldset"
      >
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Name
          </h3>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="firstName"
            >
              First name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="firstName"
              name="first_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="lastName"
            >
              Last name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="lastName"
              name="last_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Date of Birth
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="dob"
            >
              Date of Birth
            </label>
            <div
              class="usa-date-picker"
            >
              <input
                class="usa-input"
                id="dob"
                name="dob"
                type="date"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Phone number
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="phone"
            >
              Phone number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="phone"
              name="phone"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Email address
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="email"
            >
              Email address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="email"
              name="email"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Address
          </h3>
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_1"
            >
              Street address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_1"
              name="street_address_1"
              type="tel"
              value="123 Main St"
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_2"
            >
              Address line 2
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_2"
              name="street_address_2"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="tablet:grid-col-5"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="city"
            >
              City
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="city"
              name="city"
              type="text"
              value="Anytown"
            />
          </div>
          <div
            class="tablet:grid-col-3"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="state"
            >
              State
            </label>
            <select
              class="usa-select"
              data-testid="Select"
              id="state"
              name="state"
            >
              <option
                disabled=""
                value=""
              >
                Select a state
              </option>
              <option
                value="AL"
              >
                AL - Alabama
              </option>
              <option
                value="AK"
              >
                AK - Alaska
              </option>
              <option
                value="AS"
              >
                AS - American Samoa
              </option>
              <option
                value="AZ"
              >
                AZ - Arizona
              </option>
              <option
                value="AR"
              >
                AR - Arkansas
              </option>
              <option
                value="CA"
              >
                CA - California
              </option>
              <option
                value="CO"
              >
                CO - Colorado
              </option>
              <option
                value="CT"
              >
                CT - Connecticut
              </option>
              <option
                value="DE"
              >
                DE - Delaware
              </option>
              <option
                value="DC"
              >
                DC - District of Columbia
              </option>
              <option
                value="FL"
              >
                FL - Florida
              </option>
              <option
                value="GA"
              >
                GA - Georgia
              </option>
              <option
                value="GU"
              >
                GU - Guam
              </option>
              <option
                value="HI"
              >
                HI - Hawaii
              </option>
              <option
                value="ID"
              >
                ID - Idaho
              </option>
              <option
                value="IL"
              >
                IL - Illinois
              </option>
              <option
                value="IN"
              >
                IN - Indiana
              </option>
              <option
                value="IA"
              >
                IA - Iowa
              </option>
              <option
                value="KS"
              >
                KS - Kansas
              </option>
              <option
                value="KY"
              >
                KY - Kentucky
              </option>
              <option
                value="LA"
              >
                LA - Louisiana
              </option>
              <option
                value="ME"
              >
                ME - Maine
              </option>
              <option
                value="MD"
              >
                MD - Maryland
              </option>
              <option
                value="MA"
              >
                MA - Massachusetts
              </option>
              <option
                value="MI"
              >
                MI - Michigan
              </option>
              <option
                value="MN"
              >
                MN - Minnesota
              </option>
              <option
                value="MS"
              >
                MS - Mississippi
              </option>
              <option
                value="MO"
              >
                MO - Missouri
              </option>
              <option
                value="MT"
              >
                MT - Montana
              </option>
              <option
                value="NE"
              >
                NE - Nebraska
              </option>
              <option
                value="NV"
              >
                NV - Nevada
              </option>
              <option
                value="NH"
              >
                NH - New Hampshire
              </option>
              <option
                value="NJ"
              >
                NJ - New Jersey
              </option>
              <option
                value="NM"
              >
                NM - New Mexico
              </option>
              <option
                value="NY"
              >
                NY - New York
              </option>
              <option
                value="NC"
              >
                NC - North Carolina
              </option>
              <option
                value="ND"
              >
                ND - North Dakota
              </option>
              <option
                value="MP"
              >
                MP - Northern Mariana Islands
              </option>
              <option
                value="OH"
              >
                OH - Ohio
              </option>
              <option
                value="OK"
              >
                OK - Oklahoma
              </option>
              <option
                value="OR"
              >
                OR - Oregon
              </option>
              <option
                value="PA"
              >
                PA - Pennsylvania
              </option>
              <option
                value="PR"
              >
                PR - Puerto Rico
              </option>
              <option
                value="RI"
              >
                RI - Rhode Island
              </option>
              <option
                value="SC"
              >
                SC - South Carolina
              </option>
              <option
                value="SD"
              >
                SD - South Dakota
              </option>
              <option
                value="TN"
              >
                TN - Tennessee
              </option>
              <option
                value="TX"
              >
                TX - Texas
              </option>
              <option
                value="UM"
              >
                UM - United States Minor Outlying Islands
              </option>
              <option
                value="UT"
              >
                UT - Utah
              </option>
              <option
                value="VT"
              >
                VT - Vermont
              </option>
              <option
                value="VI"
              >
                VI - Virgin Islands
              </option>
              <option
                value="VA"
              >
                VA - Virginia
              </option>
              <option
                value="WA"
              >
                WA - Washington
              </option>
              <option
                value="WV"
              >
                WV - West Virginia
              </option>
              <option
                value="WI"
              >
                WI - Wisconsin
              </option>
              <option
                value="WY"
              >
                WY - Wyoming
              </option>
              <option
                value="AA"
              >
                AA - Armed Forces Americas
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Africa
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Canada
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Europe
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Middle East
              </option>
              <option
                value="AP"
              >
                AP - Armed Forces Pacific
              </option>
            </select>
          </div>
          <div
            class="tablet:grid-col-4"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="zip"
            >
              Zip code
            </label>
            <input
              class="usa-input usa-input usa-input--medium"
              data-testid="textInput"
              id="zip"
              name="zip"
              pattern="[\\d]{5}(-[\\d]{4})?"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Medical Record Number (MRN)
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="mrn"
            >
              Medical Record Number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="mrn"
              name="mrn"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <button
        class="usa-button margin-top-5"
        type="submit"
      >
        Search for patient
      </button>
    </form>
  </div>
</body>
`;

exports[`SearchForm does not prefill fhir server with bad data 1`] = `
<body>
  <div>
    <form>
      <div
        class="margin-top-4"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-step-indicator__current-step"
          >
            1
          </span>
          <span
            class="usa-step-indicator__total-steps"
          >
            of 
            4
          </span>
          <h1
            class="page-title display-inline"
          >
            Enter patient information
          </h1>
        </span>
      </div>
      <h2
        class="page-explainer"
      >
        Enter patient information below to search for a patient. We will query the connected network to find matching records.
         
      </h2>
      <div
        class="usa-summary-box demoQueryFiller"
      >
        <label
          class="usa-label margin-top-0-important maxw-full font-sans text-normal"
          data-testid="label"
          for="query"
        >
          The demo site uses synthetic data to provide examples of possible queries that you can make with the Query Connector. To proceed, click “fill fields” below.
        </label>
        <div
          class="searchCallToActionContainer"
        >
          <button
            class="usa-button usa-button--secondary"
            data-testid="button"
            type="button"
          >
            Fill fields
          </button>
          <button
            class="usa-button usa-button--unstyled margin-left-auto"
            data-testid="button"
            type="button"
          >
            Advanced
          </button>
        </div>
      </div>
      <fieldset
        class="usa-fieldset searchFormContainer bg-white"
        data-testid="fieldset"
      >
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Name
          </h3>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="firstName"
            >
              First name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="firstName"
              name="first_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="lastName"
            >
              Last name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="lastName"
              name="last_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Date of Birth
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="dob"
            >
              Date of Birth
            </label>
            <div
              class="usa-date-picker"
            >
              <input
                class="usa-input"
                id="dob"
                name="dob"
                type="date"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Phone number
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="phone"
            >
              Phone number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="phone"
              name="phone"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Email address
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="email"
            >
              Email address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="email"
              name="email"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Address
          </h3>
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_1"
            >
              Street address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_1"
              name="street_address_1"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_2"
            >
              Address line 2
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_2"
              name="street_address_2"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="tablet:grid-col-5"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="city"
            >
              City
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="city"
              name="city"
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-3"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="state"
            >
              State
            </label>
            <select
              class="usa-select"
              data-testid="Select"
              id="state"
              name="state"
            >
              <option
                disabled=""
                value=""
              >
                Select a state
              </option>
              <option
                value="AL"
              >
                AL - Alabama
              </option>
              <option
                value="AK"
              >
                AK - Alaska
              </option>
              <option
                value="AS"
              >
                AS - American Samoa
              </option>
              <option
                value="AZ"
              >
                AZ - Arizona
              </option>
              <option
                value="AR"
              >
                AR - Arkansas
              </option>
              <option
                value="CA"
              >
                CA - California
              </option>
              <option
                value="CO"
              >
                CO - Colorado
              </option>
              <option
                value="CT"
              >
                CT - Connecticut
              </option>
              <option
                value="DE"
              >
                DE - Delaware
              </option>
              <option
                value="DC"
              >
                DC - District of Columbia
              </option>
              <option
                value="FL"
              >
                FL - Florida
              </option>
              <option
                value="GA"
              >
                GA - Georgia
              </option>
              <option
                value="GU"
              >
                GU - Guam
              </option>
              <option
                value="HI"
              >
                HI - Hawaii
              </option>
              <option
                value="ID"
              >
                ID - Idaho
              </option>
              <option
                value="IL"
              >
                IL - Illinois
              </option>
              <option
                value="IN"
              >
                IN - Indiana
              </option>
              <option
                value="IA"
              >
                IA - Iowa
              </option>
              <option
                value="KS"
              >
                KS - Kansas
              </option>
              <option
                value="KY"
              >
                KY - Kentucky
              </option>
              <option
                value="LA"
              >
                LA - Louisiana
              </option>
              <option
                value="ME"
              >
                ME - Maine
              </option>
              <option
                value="MD"
              >
                MD - Maryland
              </option>
              <option
                value="MA"
              >
                MA - Massachusetts
              </option>
              <option
                value="MI"
              >
                MI - Michigan
              </option>
              <option
                value="MN"
              >
                MN - Minnesota
              </option>
              <option
                value="MS"
              >
                MS - Mississippi
              </option>
              <option
                value="MO"
              >
                MO - Missouri
              </option>
              <option
                value="MT"
              >
                MT - Montana
              </option>
              <option
                value="NE"
              >
                NE - Nebraska
              </option>
              <option
                value="NV"
              >
                NV - Nevada
              </option>
              <option
                value="NH"
              >
                NH - New Hampshire
              </option>
              <option
                value="NJ"
              >
                NJ - New Jersey
              </option>
              <option
                value="NM"
              >
                NM - New Mexico
              </option>
              <option
                value="NY"
              >
                NY - New York
              </option>
              <option
                value="NC"
              >
                NC - North Carolina
              </option>
              <option
                value="ND"
              >
                ND - North Dakota
              </option>
              <option
                value="MP"
              >
                MP - Northern Mariana Islands
              </option>
              <option
                value="OH"
              >
                OH - Ohio
              </option>
              <option
                value="OK"
              >
                OK - Oklahoma
              </option>
              <option
                value="OR"
              >
                OR - Oregon
              </option>
              <option
                value="PA"
              >
                PA - Pennsylvania
              </option>
              <option
                value="PR"
              >
                PR - Puerto Rico
              </option>
              <option
                value="RI"
              >
                RI - Rhode Island
              </option>
              <option
                value="SC"
              >
                SC - South Carolina
              </option>
              <option
                value="SD"
              >
                SD - South Dakota
              </option>
              <option
                value="TN"
              >
                TN - Tennessee
              </option>
              <option
                value="TX"
              >
                TX - Texas
              </option>
              <option
                value="UM"
              >
                UM - United States Minor Outlying Islands
              </option>
              <option
                value="UT"
              >
                UT - Utah
              </option>
              <option
                value="VT"
              >
                VT - Vermont
              </option>
              <option
                value="VI"
              >
                VI - Virgin Islands
              </option>
              <option
                value="VA"
              >
                VA - Virginia
              </option>
              <option
                value="WA"
              >
                WA - Washington
              </option>
              <option
                value="WV"
              >
                WV - West Virginia
              </option>
              <option
                value="WI"
              >
                WI - Wisconsin
              </option>
              <option
                value="WY"
              >
                WY - Wyoming
              </option>
              <option
                value="AA"
              >
                AA - Armed Forces Americas
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Africa
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Canada
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Europe
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Middle East
              </option>
              <option
                value="AP"
              >
                AP - Armed Forces Pacific
              </option>
            </select>
          </div>
          <div
            class="tablet:grid-col-4"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="zip"
            >
              Zip code
            </label>
            <input
              class="usa-input usa-input usa-input--medium"
              data-testid="textInput"
              id="zip"
              name="zip"
              pattern="[\\d]{5}(-[\\d]{4})?"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Medical Record Number (MRN)
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="mrn"
            >
              Medical Record Number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="mrn"
              name="mrn"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <button
        class="usa-button margin-top-5"
        type="submit"
      >
        Search for patient
      </button>
    </form>
  </div>
</body>
`;

exports[`SearchForm prefills form fields from query params 1`] = `
<body>
  <div>
    <form>
      <div
        class="margin-top-4"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-step-indicator__current-step"
          >
            1
          </span>
          <span
            class="usa-step-indicator__total-steps"
          >
            of 
            4
          </span>
          <h1
            class="page-title display-inline"
          >
            Enter patient information
          </h1>
        </span>
      </div>
      <h2
        class="page-explainer"
      >
        Enter patient information below to search for a patient. We will query the connected network to find matching records.
         
      </h2>
      <div
        class="usa-summary-box demoQueryFiller"
      >
        <label
          class="usa-label margin-top-0-important maxw-full font-sans text-normal"
          data-testid="label"
          for="query"
        >
          The demo site uses synthetic data to provide examples of possible queries that you can make with the Query Connector. To proceed, click “fill fields” below.
        </label>
        <div
          class="searchCallToActionContainer"
        >
          <button
            class="usa-button usa-button--secondary"
            data-testid="button"
            type="button"
          >
            Fill fields
          </button>
          <button
            class="usa-button usa-button--unstyled margin-left-auto"
            data-testid="button"
            type="button"
          >
            Advanced
          </button>
        </div>
      </div>
      <fieldset
        class="usa-fieldset searchFormContainer bg-white"
        data-testid="fieldset"
      >
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Name
          </h3>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="firstName"
            >
              First name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="firstName"
              name="first_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="lastName"
            >
              Last name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="lastName"
              name="last_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value="unlucky"
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Date of Birth
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="dob"
            >
              Date of Birth
            </label>
            <div
              class="usa-date-picker"
            >
              <input
                class="usa-input"
                id="dob"
                name="dob"
                type="date"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Phone number
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="phone"
            >
              Phone number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="phone"
              name="phone"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Email address
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="email"
            >
              Email address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="email"
              name="email"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Address
          </h3>
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_1"
            >
              Street address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_1"
              name="street_address_1"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_2"
            >
              Address line 2
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_2"
              name="street_address_2"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="tablet:grid-col-5"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="city"
            >
              City
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="city"
              name="city"
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-3"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="state"
            >
              State
            </label>
            <select
              class="usa-select"
              data-testid="Select"
              id="state"
              name="state"
            >
              <option
                disabled=""
                value=""
              >
                Select a state
              </option>
              <option
                value="AL"
              >
                AL - Alabama
              </option>
              <option
                value="AK"
              >
                AK - Alaska
              </option>
              <option
                value="AS"
              >
                AS - American Samoa
              </option>
              <option
                value="AZ"
              >
                AZ - Arizona
              </option>
              <option
                value="AR"
              >
                AR - Arkansas
              </option>
              <option
                value="CA"
              >
                CA - California
              </option>
              <option
                value="CO"
              >
                CO - Colorado
              </option>
              <option
                value="CT"
              >
                CT - Connecticut
              </option>
              <option
                value="DE"
              >
                DE - Delaware
              </option>
              <option
                value="DC"
              >
                DC - District of Columbia
              </option>
              <option
                value="FL"
              >
                FL - Florida
              </option>
              <option
                value="GA"
              >
                GA - Georgia
              </option>
              <option
                value="GU"
              >
                GU - Guam
              </option>
              <option
                value="HI"
              >
                HI - Hawaii
              </option>
              <option
                value="ID"
              >
                ID - Idaho
              </option>
              <option
                value="IL"
              >
                IL - Illinois
              </option>
              <option
                value="IN"
              >
                IN - Indiana
              </option>
              <option
                value="IA"
              >
                IA - Iowa
              </option>
              <option
                value="KS"
              >
                KS - Kansas
              </option>
              <option
                value="KY"
              >
                KY - Kentucky
              </option>
              <option
                value="LA"
              >
                LA - Louisiana
              </option>
              <option
                value="ME"
              >
                ME - Maine
              </option>
              <option
                value="MD"
              >
                MD - Maryland
              </option>
              <option
                value="MA"
              >
                MA - Massachusetts
              </option>
              <option
                value="MI"
              >
                MI - Michigan
              </option>
              <option
                value="MN"
              >
                MN - Minnesota
              </option>
              <option
                value="MS"
              >
                MS - Mississippi
              </option>
              <option
                value="MO"
              >
                MO - Missouri
              </option>
              <option
                value="MT"
              >
                MT - Montana
              </option>
              <option
                value="NE"
              >
                NE - Nebraska
              </option>
              <option
                value="NV"
              >
                NV - Nevada
              </option>
              <option
                value="NH"
              >
                NH - New Hampshire
              </option>
              <option
                value="NJ"
              >
                NJ - New Jersey
              </option>
              <option
                value="NM"
              >
                NM - New Mexico
              </option>
              <option
                value="NY"
              >
                NY - New York
              </option>
              <option
                value="NC"
              >
                NC - North Carolina
              </option>
              <option
                value="ND"
              >
                ND - North Dakota
              </option>
              <option
                value="MP"
              >
                MP - Northern Mariana Islands
              </option>
              <option
                value="OH"
              >
                OH - Ohio
              </option>
              <option
                value="OK"
              >
                OK - Oklahoma
              </option>
              <option
                value="OR"
              >
                OR - Oregon
              </option>
              <option
                value="PA"
              >
                PA - Pennsylvania
              </option>
              <option
                value="PR"
              >
                PR - Puerto Rico
              </option>
              <option
                value="RI"
              >
                RI - Rhode Island
              </option>
              <option
                value="SC"
              >
                SC - South Carolina
              </option>
              <option
                value="SD"
              >
                SD - South Dakota
              </option>
              <option
                value="TN"
              >
                TN - Tennessee
              </option>
              <option
                value="TX"
              >
                TX - Texas
              </option>
              <option
                value="UM"
              >
                UM - United States Minor Outlying Islands
              </option>
              <option
                value="UT"
              >
                UT - Utah
              </option>
              <option
                value="VT"
              >
                VT - Vermont
              </option>
              <option
                value="VI"
              >
                VI - Virgin Islands
              </option>
              <option
                value="VA"
              >
                VA - Virginia
              </option>
              <option
                value="WA"
              >
                WA - Washington
              </option>
              <option
                value="WV"
              >
                WV - West Virginia
              </option>
              <option
                value="WI"
              >
                WI - Wisconsin
              </option>
              <option
                value="WY"
              >
                WY - Wyoming
              </option>
              <option
                value="AA"
              >
                AA - Armed Forces Americas
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Africa
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Canada
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Europe
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Middle East
              </option>
              <option
                value="AP"
              >
                AP - Armed Forces Pacific
              </option>
            </select>
          </div>
          <div
            class="tablet:grid-col-4"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="zip"
            >
              Zip code
            </label>
            <input
              class="usa-input usa-input usa-input--medium"
              data-testid="textInput"
              id="zip"
              name="zip"
              pattern="[\\d]{5}(-[\\d]{4})?"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Medical Record Number (MRN)
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="mrn"
            >
              Medical Record Number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="mrn"
              name="mrn"
              type="text"
              value="1234"
            />
          </div>
        </div>
      </fieldset>
      <button
        class="usa-button margin-top-5"
        type="submit"
      >
        Search for patient
      </button>
    </form>
  </div>
</body>
`;

exports[`SearchForm renders fhir server form options on button click 1`] = `
<body>
  <div>
    <form>
      <div
        class="margin-top-4"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-step-indicator__current-step"
          >
            1
          </span>
          <span
            class="usa-step-indicator__total-steps"
          >
            of 
            4
          </span>
          <h1
            class="page-title display-inline"
          >
            Enter patient information
          </h1>
        </span>
      </div>
      <h2
        class="page-explainer"
      >
        Enter patient information below to search for a patient. We will query the connected network to find matching records.
         
      </h2>
      <div
        class="usa-summary-box demoQueryFiller"
      >
        <label
          class="usa-label margin-top-0-important maxw-full font-sans text-normal"
          data-testid="label"
          for="query"
        >
          The demo site uses synthetic data to provide examples of possible queries that you can make with the Query Connector. To proceed, click “fill fields” below.
        </label>
        <div
          class="searchCallToActionContainer"
        >
          <button
            class="usa-button usa-button--secondary"
            data-testid="button"
            type="button"
          >
            Fill fields
          </button>
          <button
            class="usa-button usa-button--unstyled margin-left-auto"
            data-testid="button"
            type="button"
          >
            Advanced
          </button>
        </div>
      </div>
      <fieldset
        class="usa-fieldset searchFormContainer bg-white"
        data-testid="fieldset"
      >
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Name
          </h3>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="firstName"
            >
              First name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="firstName"
              name="first_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="lastName"
            >
              Last name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="lastName"
              name="last_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Date of Birth
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="dob"
            >
              Date of Birth
            </label>
            <div
              class="usa-date-picker"
            >
              <input
                class="usa-input"
                id="dob"
                name="dob"
                type="date"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Phone number
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="phone"
            >
              Phone number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="phone"
              name="phone"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Email address
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="email"
            >
              Email address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="email"
              name="email"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Address
          </h3>
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_1"
            >
              Street address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_1"
              name="street_address_1"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_2"
            >
              Address line 2
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_2"
              name="street_address_2"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="tablet:grid-col-5"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="city"
            >
              City
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="city"
              name="city"
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-3"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="state"
            >
              State
            </label>
            <select
              class="usa-select"
              data-testid="Select"
              id="state"
              name="state"
            >
              <option
                disabled=""
                value=""
              >
                Select a state
              </option>
              <option
                value="AL"
              >
                AL - Alabama
              </option>
              <option
                value="AK"
              >
                AK - Alaska
              </option>
              <option
                value="AS"
              >
                AS - American Samoa
              </option>
              <option
                value="AZ"
              >
                AZ - Arizona
              </option>
              <option
                value="AR"
              >
                AR - Arkansas
              </option>
              <option
                value="CA"
              >
                CA - California
              </option>
              <option
                value="CO"
              >
                CO - Colorado
              </option>
              <option
                value="CT"
              >
                CT - Connecticut
              </option>
              <option
                value="DE"
              >
                DE - Delaware
              </option>
              <option
                value="DC"
              >
                DC - District of Columbia
              </option>
              <option
                value="FL"
              >
                FL - Florida
              </option>
              <option
                value="GA"
              >
                GA - Georgia
              </option>
              <option
                value="GU"
              >
                GU - Guam
              </option>
              <option
                value="HI"
              >
                HI - Hawaii
              </option>
              <option
                value="ID"
              >
                ID - Idaho
              </option>
              <option
                value="IL"
              >
                IL - Illinois
              </option>
              <option
                value="IN"
              >
                IN - Indiana
              </option>
              <option
                value="IA"
              >
                IA - Iowa
              </option>
              <option
                value="KS"
              >
                KS - Kansas
              </option>
              <option
                value="KY"
              >
                KY - Kentucky
              </option>
              <option
                value="LA"
              >
                LA - Louisiana
              </option>
              <option
                value="ME"
              >
                ME - Maine
              </option>
              <option
                value="MD"
              >
                MD - Maryland
              </option>
              <option
                value="MA"
              >
                MA - Massachusetts
              </option>
              <option
                value="MI"
              >
                MI - Michigan
              </option>
              <option
                value="MN"
              >
                MN - Minnesota
              </option>
              <option
                value="MS"
              >
                MS - Mississippi
              </option>
              <option
                value="MO"
              >
                MO - Missouri
              </option>
              <option
                value="MT"
              >
                MT - Montana
              </option>
              <option
                value="NE"
              >
                NE - Nebraska
              </option>
              <option
                value="NV"
              >
                NV - Nevada
              </option>
              <option
                value="NH"
              >
                NH - New Hampshire
              </option>
              <option
                value="NJ"
              >
                NJ - New Jersey
              </option>
              <option
                value="NM"
              >
                NM - New Mexico
              </option>
              <option
                value="NY"
              >
                NY - New York
              </option>
              <option
                value="NC"
              >
                NC - North Carolina
              </option>
              <option
                value="ND"
              >
                ND - North Dakota
              </option>
              <option
                value="MP"
              >
                MP - Northern Mariana Islands
              </option>
              <option
                value="OH"
              >
                OH - Ohio
              </option>
              <option
                value="OK"
              >
                OK - Oklahoma
              </option>
              <option
                value="OR"
              >
                OR - Oregon
              </option>
              <option
                value="PA"
              >
                PA - Pennsylvania
              </option>
              <option
                value="PR"
              >
                PR - Puerto Rico
              </option>
              <option
                value="RI"
              >
                RI - Rhode Island
              </option>
              <option
                value="SC"
              >
                SC - South Carolina
              </option>
              <option
                value="SD"
              >
                SD - South Dakota
              </option>
              <option
                value="TN"
              >
                TN - Tennessee
              </option>
              <option
                value="TX"
              >
                TX - Texas
              </option>
              <option
                value="UM"
              >
                UM - United States Minor Outlying Islands
              </option>
              <option
                value="UT"
              >
                UT - Utah
              </option>
              <option
                value="VT"
              >
                VT - Vermont
              </option>
              <option
                value="VI"
              >
                VI - Virgin Islands
              </option>
              <option
                value="VA"
              >
                VA - Virginia
              </option>
              <option
                value="WA"
              >
                WA - Washington
              </option>
              <option
                value="WV"
              >
                WV - West Virginia
              </option>
              <option
                value="WI"
              >
                WI - Wisconsin
              </option>
              <option
                value="WY"
              >
                WY - Wyoming
              </option>
              <option
                value="AA"
              >
                AA - Armed Forces Americas
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Africa
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Canada
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Europe
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Middle East
              </option>
              <option
                value="AP"
              >
                AP - Armed Forces Pacific
              </option>
            </select>
          </div>
          <div
            class="tablet:grid-col-4"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="zip"
            >
              Zip code
            </label>
            <input
              class="usa-input usa-input usa-input--medium"
              data-testid="textInput"
              id="zip"
              name="zip"
              pattern="[\\d]{5}(-[\\d]{4})?"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Medical Record Number (MRN)
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="mrn"
            >
              Medical Record Number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="mrn"
              name="mrn"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <button
        class="usa-button margin-top-5"
        type="submit"
      >
        Search for patient
      </button>
    </form>
  </div>
</body>
`;

exports[`SearchForm renders the patient search form 1`] = `
<body>
  <div>
    <form>
      <div
        class="margin-top-4"
      >
        <span
          class="usa-step-indicator__heading-counter"
        >
          <span
            class="usa-step-indicator__current-step"
          >
            1
          </span>
          <span
            class="usa-step-indicator__total-steps"
          >
            of 
            4
          </span>
          <h1
            class="page-title display-inline"
          >
            Enter patient information
          </h1>
        </span>
      </div>
      <h2
        class="page-explainer"
      >
        Enter patient information below to search for a patient. We will query the connected network to find matching records.
         
      </h2>
      <div
        class="usa-summary-box demoQueryFiller"
      >
        <label
          class="usa-label margin-top-0-important maxw-full font-sans text-normal"
          data-testid="label"
          for="query"
        >
          The demo site uses synthetic data to provide examples of possible queries that you can make with the Query Connector. To proceed, click “fill fields” below.
        </label>
        <div
          class="searchCallToActionContainer"
        >
          <button
            class="usa-button usa-button--secondary"
            data-testid="button"
            type="button"
          >
            Fill fields
          </button>
          <button
            class="usa-button usa-button--unstyled margin-left-auto"
            data-testid="button"
            type="button"
          >
            Advanced
          </button>
        </div>
      </div>
      <fieldset
        class="usa-fieldset searchFormContainer bg-white"
        data-testid="fieldset"
      >
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Name
          </h3>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="firstName"
            >
              First name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="firstName"
              name="first_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="lastName"
            >
              Last name
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="lastName"
              name="last_name"
              pattern="^[A-Za-zÀ-ɏḀ-ỿ\\-'. ]+$"
              title="Enter a name using only letters, hyphens, apostrophes, spaces, or periods."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Date of Birth
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="dob"
            >
              Date of Birth
            </label>
            <div
              class="usa-date-picker"
            >
              <input
                class="usa-input"
                id="dob"
                name="dob"
                type="date"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Phone number
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="phone"
            >
              Phone number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="phone"
              name="phone"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Email address
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="email"
            >
              Email address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="email"
              name="email"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Address
          </h3>
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_1"
            >
              Street address
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_1"
              name="street_address_1"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="grid-col"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="street_address_2"
            >
              Address line 2
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="street_address_2"
              name="street_address_2"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <div
            class="tablet:grid-col-5"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="city"
            >
              City
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="city"
              name="city"
              type="text"
              value=""
            />
          </div>
          <div
            class="tablet:grid-col-3"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="state"
            >
              State
            </label>
            <select
              class="usa-select"
              data-testid="Select"
              id="state"
              name="state"
            >
              <option
                disabled=""
                value=""
              >
                Select a state
              </option>
              <option
                value="AL"
              >
                AL - Alabama
              </option>
              <option
                value="AK"
              >
                AK - Alaska
              </option>
              <option
                value="AS"
              >
                AS - American Samoa
              </option>
              <option
                value="AZ"
              >
                AZ - Arizona
              </option>
              <option
                value="AR"
              >
                AR - Arkansas
              </option>
              <option
                value="CA"
              >
                CA - California
              </option>
              <option
                value="CO"
              >
                CO - Colorado
              </option>
              <option
                value="CT"
              >
                CT - Connecticut
              </option>
              <option
                value="DE"
              >
                DE - Delaware
              </option>
              <option
                value="DC"
              >
                DC - District of Columbia
              </option>
              <option
                value="FL"
              >
                FL - Florida
              </option>
              <option
                value="GA"
              >
                GA - Georgia
              </option>
              <option
                value="GU"
              >
                GU - Guam
              </option>
              <option
                value="HI"
              >
                HI - Hawaii
              </option>
              <option
                value="ID"
              >
                ID - Idaho
              </option>
              <option
                value="IL"
              >
                IL - Illinois
              </option>
              <option
                value="IN"
              >
                IN - Indiana
              </option>
              <option
                value="IA"
              >
                IA - Iowa
              </option>
              <option
                value="KS"
              >
                KS - Kansas
              </option>
              <option
                value="KY"
              >
                KY - Kentucky
              </option>
              <option
                value="LA"
              >
                LA - Louisiana
              </option>
              <option
                value="ME"
              >
                ME - Maine
              </option>
              <option
                value="MD"
              >
                MD - Maryland
              </option>
              <option
                value="MA"
              >
                MA - Massachusetts
              </option>
              <option
                value="MI"
              >
                MI - Michigan
              </option>
              <option
                value="MN"
              >
                MN - Minnesota
              </option>
              <option
                value="MS"
              >
                MS - Mississippi
              </option>
              <option
                value="MO"
              >
                MO - Missouri
              </option>
              <option
                value="MT"
              >
                MT - Montana
              </option>
              <option
                value="NE"
              >
                NE - Nebraska
              </option>
              <option
                value="NV"
              >
                NV - Nevada
              </option>
              <option
                value="NH"
              >
                NH - New Hampshire
              </option>
              <option
                value="NJ"
              >
                NJ - New Jersey
              </option>
              <option
                value="NM"
              >
                NM - New Mexico
              </option>
              <option
                value="NY"
              >
                NY - New York
              </option>
              <option
                value="NC"
              >
                NC - North Carolina
              </option>
              <option
                value="ND"
              >
                ND - North Dakota
              </option>
              <option
                value="MP"
              >
                MP - Northern Mariana Islands
              </option>
              <option
                value="OH"
              >
                OH - Ohio
              </option>
              <option
                value="OK"
              >
                OK - Oklahoma
              </option>
              <option
                value="OR"
              >
                OR - Oregon
              </option>
              <option
                value="PA"
              >
                PA - Pennsylvania
              </option>
              <option
                value="PR"
              >
                PR - Puerto Rico
              </option>
              <option
                value="RI"
              >
                RI - Rhode Island
              </option>
              <option
                value="SC"
              >
                SC - South Carolina
              </option>
              <option
                value="SD"
              >
                SD - South Dakota
              </option>
              <option
                value="TN"
              >
                TN - Tennessee
              </option>
              <option
                value="TX"
              >
                TX - Texas
              </option>
              <option
                value="UM"
              >
                UM - United States Minor Outlying Islands
              </option>
              <option
                value="UT"
              >
                UT - Utah
              </option>
              <option
                value="VT"
              >
                VT - Vermont
              </option>
              <option
                value="VI"
              >
                VI - Virgin Islands
              </option>
              <option
                value="VA"
              >
                VA - Virginia
              </option>
              <option
                value="WA"
              >
                WA - Washington
              </option>
              <option
                value="WV"
              >
                WV - West Virginia
              </option>
              <option
                value="WI"
              >
                WI - Wisconsin
              </option>
              <option
                value="WY"
              >
                WY - Wyoming
              </option>
              <option
                value="AA"
              >
                AA - Armed Forces Americas
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Africa
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Canada
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Europe
              </option>
              <option
                value="AE"
              >
                AE - Armed Forces Middle East
              </option>
              <option
                value="AP"
              >
                AP - Armed Forces Pacific
              </option>
            </select>
          </div>
          <div
            class="tablet:grid-col-4"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="zip"
            >
              Zip code
            </label>
            <input
              class="usa-input usa-input usa-input--medium"
              data-testid="textInput"
              id="zip"
              name="zip"
              pattern="[\\d]{5}(-[\\d]{4})?"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid-row grid-gap margin-bottom-4"
        >
          <h3
            class=""font-sans-md" searchFormSectionLabel"
          >
            Medical Record Number (MRN)
          </h3>
          <div
            class="grid-col-6"
          >
            <label
              class="usa-label margin-top-0-important"
              data-testid="label"
              for="mrn"
            >
              Medical Record Number
            </label>
            <input
              class="usa-input"
              data-testid="textInput"
              id="mrn"
              name="mrn"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <button
        class="usa-button margin-top-5"
        type="submit"
      >
        Search for patient
      </button>
    </form>
  </div>
</body>
`;
